--- a/table.html
+++ b/table.html
@@ -68,7 +68,7 @@
 
         </div>
 
-        <button>Feltölt</button>
+        <button>Feltöltés</button>
 
     </form>
     <script src="main.js"></script>
